# fancy_barchart

./: LICENSE  README.md  pyproject.toml
src/fancy_barchart/: barchart.py  colormaps.py  legend.py  util.py
