# Following https://github.com/pypa/sampleproject/blob/main/pyproject.toml and
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/#single-sourcing-the-version

[project]
name = "fancy_barchart"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fancy_barchart.__version__"}