# Following https://github.com/pypa/sampleproject/blob/main/pyproject.toml and
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/#single-sourcing-the-version

[project]
name = "fancy_barchart"
dynamic = ["version"]
dependencies = ["matplotlib", "numpy"]
requires-python = ">=3.9"

[project.optional-dependencies]
lab = ["scikit-image"]

[tool.setuptools.dynamic]
version = {attr = "fancy_barchart.__version__"}